--- a/pwa-gallery/public/manifest.json
+++ b/pwa-gallery/public/manifest.json
@@ -8,6 +8,11 @@
       "src":"icon.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+	{
+      "src":"splash.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": "/?utm_source=homescreen",
